--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "08-socket-colas",
+    "name": "08-sockets-project-bdb",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
